<resources>
  <string name="app_name">eHealthSupermarket</string>
  <string name="holaPrimero">Hola mundo!!!</string>


  <string name="home_label">Inicio</string>
  <string name="mylistLabel">Mis Listas</string>
  <string name="scanLabel">Escanear</string>
  <string name="intolerancesLabel">Intolerancias</string>
  <string name="accountLabel">Cuenta</string>
  <string name="productImage">Información del producto</string>
  <string name="productName">Lays Patatas Fritas Ca,pesinas</string>
  <string name="productWeigth">300g</string>
  <string name="intolerancesBased">Basados en tus intolerancias</string>
  <string name="similarIntolerances">Basados en perfiles similares al tuyo</string>
  <string name="favouritesProduct">Tus favoritos</string>
  <string name="allProduct">Todos los productos</string>
  <string name="recommendedProducts">Productos recomendados</string>
  <string name="list_add">Añadir lista</string>
  <string name="create_list">Crear una lista de compra</string>
  <string name="enter_name">"Nombre: "</string>
  <string name="enter_list_hint">Nombre de la lista</string>
  <string name="add_list">Añadir</string>
  <string name="cancel_list">Cancelar</string>
  <string name="close_text">X</string>
  <string name="show_more">Ver más...</string>
  <string name="show_all">VER TODO</string>
  <string name="product_information">"Ingredientes: Patatas. aceite de maíz. condimento preparado de vegetales y especias [lactosa. azúcar. potenciadores del sabor (glutamato monosódico. 5'-ribonucleótido disódico). dextrosa. cebolla en polvo. pimentón molido. tomate en polvo. ajo en polvo. perejil. proteína hidrolizada de soja. sustancias aromatizantes. reguladores de acidez (ácido cítrico. ácido málico). colorante (extracto de pimentón). edulcorante (aspartamo). proteínas de leche. aromas de humo]. sal. Contiene una fuente de fenilalanina."</string>
  <string name="product_information_1">Nota legal: Te recomendamos que siempre leas las etiquetas, advertencias e instrucciones del embalaje del producto antes de utilizarlo o consumirlo, ya que podrás encontrar información más detallada y actualizada sobre el mismo.</string>
  <string name="button_forgot_password">¿Has olvidado tu contraseña?</string>
  <string name="minimum_password">Contraseña demasiado corta, debe contener almenos 6 carácteres</string>
  <string name="auth_failed">Los datos no son correctos, revisa tu correo y contraseña o regístrate</string>

  <string name="all_products">Todos los productos:</string>
  <string name="title_activity_android_camera2_a_p_i">AndroidCamera2API</string>
  <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
  <string name="hello_world">Hello Square World!</string>
  <string name="no_products_based_in_intolerances">En este espacio se mostrarán productos basados en las intolerancias que sean configuradas en el apartado de intolerancias.</string>
  <string name="go_to_intolerances">Ir a intolerancias</string>
  <string name="no_products_favorites">En este espacio se mostrarán sus productos favoritos</string>
  <string name="go_to_scanSection">Añade productos a tus favoritos</string>
  <string name="apto">Este producto es apto para ti</string>
  <string name="no_apto">Este producto no es apto para ti</string>
  <string name="discover_the_new">Descubre lo nuevo</string>
  <string name="new_without_lactosa">Lo nuevo sin lactosa</string>
  <string name="new_without_fructosa">Lo nuevo sin fructosa</string>
  <string name="content_rectangle1">content_rectangle1</string>
  <string name="content_rectangle2">content_rectangle2</string>
  <string name="email">Email</string>
  <string name="contrasena">Contraseña</string>
  <string name="registrar">Registrar</string>
  <string name="ad_product_list">Add product</string>
  <string name="add_products_to_your_list">Añade productos a tu lista</string>
  <string name="est_seguro_que_desea_borrar_la_lista">¿Está seguro que desea borrar la lista?</string>
  <string name="remove_item">Borrar</string>
</resources>