<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_layout"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:background="@color/grey"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/cerclebackground"
        android:text="@string/close_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.002"></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/createlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_list"
            android:layout_gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/listname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:layout_gravity="start"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/createlist">
        </TextView>
        <EditText
            android:id="@+id/name_of_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/listname"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/createlist"
            android:layout_marginEnd="5dp"
            android:textSize="28sp"
            android:hint="@string/enter_list_hint"
            android:inputType="text"
            android:importantForAutofill="no"
            ></EditText>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/add_list"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/btnAdd"
            android:background="@drawable/buttonstyle"
            android:text="@string/cancel_list"
            android:textColor="@color/white"></Button>
    </RelativeLayout>
</LinearLayout>