<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_layout"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/cerclebackground"
        android:gravity="center"
        android:text="@string/close_text"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.002"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/est_seguro_que_desea_borrar_la_lista" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/remove_item"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/btnAdd"
            android:text="@string/cancel_list"
            android:textColor="@color/white"></Button>
    </RelativeLayout>
</LinearLayout>