<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginHorizontal="1dp"
    android:background="@drawable/customborder"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:visibility="visible"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:clickable="false">

    <LinearLayout
      android:id="@+id/square"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:orientation="vertical"
      android:visibility="visible"
      android:padding="2dp">

      <ImageView
        android:id="@+id/imageProduct_grid"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/customborder"
        android:contentDescription="@string/productImage"
        android:scaleType="fitCenter">

      </ImageView>

      <TextView
        android:id="@+id/product_name_grid"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:text="@string/productName"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:padding="5dp"></TextView>


      <TextView
        android:id="@+id/product_quantity_grid"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/productWeigth"
        android:padding="5dp">

      </TextView>
    </LinearLayout>
  </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>