<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <!-- https://github.com/mancj/MaterialSearchBar -->

  <Button
    android:id="@+id/button_viewAll"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:backgroundTint="@color/white"
    android:text="@string/show_all"
    android:textColor="@color/black"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="@+id/allProducts"
    app:layout_constraintTop_toTopOf="@id/allProducts"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginRight="5dp" />

  <Space
    android:id="@+id/space"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    app:layout_constraintBottom_toTopOf="@id/allProducts"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/smartButton" />

  <TextView
    android:id="@+id/allProducts"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text="@string/all_products"
    android:textColor="#000000"
    android:textSize="25sp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginHorizontal="10dp"
    app:layout_constraintTop_toBottomOf="@id/space" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/qrButton"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:icon="@drawable/baseline_qr_code_scanner_black_48dp"
    app:iconGravity="textStart"
    app:iconSize="150dp"
    app:layout_constraintBottom_toTopOf="@id/allProducts"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/smartButton"
    app:layout_constraintTop_toTopOf="parent"></com.google.android.material.button.MaterialButton>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/smartButton"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:icon="@drawable/baseline_monochrome_photos_black_48dp"
    app:iconGravity="textStart"
    app:iconSize="150dp"
    app:layout_constraintBottom_toTopOf="@id/allProducts"
    app:layout_constraintEnd_toStartOf="@+id/qrButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"></com.google.android.material.button.MaterialButton>
  <ScrollView
    android:id="@+id/scrollViewProducts"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/allProducts"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="0dp">
      <LinearLayout
        android:id="@+id/square1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/square2"
        android:clickable="true">

        <ImageView
          android:id="@+id/imageProduct_grid1"
          android:layout_width="180dp"
          android:layout_height="180dp"
          android:background="@drawable/customborder"
          android:contentDescription="@string/productImage"
          android:scaleType="fitCenter">

        </ImageView>

        <TextView
          android:id="@+id/product_name_grid1"
          android:layout_width="190dp"
          android:layout_height="45dp"
          android:text="@string/productName"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:padding="5dp"></TextView>


        <TextView
          android:id="@+id/product_quantity_grid1"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:text="@string/productWeigth"
          android:padding="5dp"></TextView>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/square2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/square1"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true">

        <ImageView
          android:id="@+id/imageProduct_grid2"
          android:layout_width="180dp"
          android:layout_height="180dp"
          android:background="@drawable/customborder"
          android:contentDescription="@string/productImage"
          android:scaleType="fitCenter">

        </ImageView>

        <TextView
          android:id="@+id/product_name_grid2"
          android:layout_width="190dp"
          android:layout_height="45dp"
          android:text="@string/productName"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:padding="5dp"></TextView>


        <TextView
          android:id="@+id/product_quantity_grid2"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:text="@string/productWeigth"
          android:padding="5dp">

        </TextView>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/square3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/square1"
        app:layout_constraintStart_toStartOf="@id/square1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true">

        <ImageView
          android:id="@+id/imageProduct_grid3"
          android:layout_width="180dp"
          android:layout_height="180dp"
          android:background="@drawable/customborder"
          android:contentDescription="@string/productImage"
          android:scaleType="fitCenter">

        </ImageView>

        <TextView
          android:id="@+id/product_name_grid3"
          android:layout_width="190dp"
          android:layout_height="45dp"
          android:text="@string/productName"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:padding="5dp"></TextView>

        <TextView
          android:id="@+id/product_quantity_grid3"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:text="@string/productWeigth"
          android:padding="5dp"></TextView>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/square4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/square2"
        app:layout_constraintStart_toEndOf="@id/square3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true">

        <ImageView
          android:id="@+id/imageProduct_grid4"
          android:layout_width="180dp"
          android:layout_height="180dp"
          android:background="@drawable/customborder"
          android:contentDescription="@string/productImage"
          android:scaleType="fitCenter"></ImageView>

        <TextView
          android:id="@+id/product_name_grid4"
          android:layout_width="190dp"
          android:layout_height="45dp"
          android:text="@string/productName"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:padding="5dp"></TextView>

        <TextView
          android:id="@+id/product_quantity_grid4"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:text="@string/productWeigth"
          android:padding="5dp"></TextView>
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>