<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ActivityProductView">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <ImageView
      android:id="@+id/imageView_product"
      android:layout_width="match_parent"
      android:layout_height="392dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/textGenericName"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:text="Patatas fritas receta campesina Lay´s"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/imageView_product" />

    <TextView
      android:id="@+id/textQuantity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginHorizontal="10dp"
      android:text="Paquete 160 g"
      android:textSize="15sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textGenericName" />
    <View
      android:id="@+id/line_quantity"
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#D1CDCD"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textQuantity" />

    <TextView
      android:id="@+id/compatibilidad"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="5dp"
      android:text="COMPATIBILIDAD:"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/line_quantity" />

    <TextView
      android:id="@+id/result_compatibility"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginHorizontal="10dp"
      android:text="@string/apto"
      android:textColor="@color/green"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/compatibilidad" />

    <View
      android:id="@+id/linea_compatibility"
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#D1CDCD"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/result_compatibility" />

    <LinearLayout
      android:id="@+id/layout_like"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:orientation="vertical"
      android:layout_marginHorizontal="5dp"
      android:layout_marginVertical="10dp"
      android:background="@drawable/border_button_unpressed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linea_compatibility"
      android:clickable="true">

      <ImageView
        android:id="@+id/button_addFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_like_unselect"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:clickable="false" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/layout_dislike"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="3dp"
      android:layout_marginHorizontal="5dp"
      android:layout_marginVertical="10dp"
      android:background="@drawable/border_button_unpressed"
      android:clickable="true"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@id/layout_like"
      app:layout_constraintTop_toBottomOf="@+id/linea_compatibility">

      <ImageView
        android:id="@+id/button_addFav2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:background="@drawable/ic_dislike_unselected"
        android:clickable="false" />
    </LinearLayout>
    <TextView
      android:id="@+id/titleInformationText"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      android:text="Información importante"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/layout_like" />

    <TextView
      android:id="@+id/textInformationText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      android:text="@string/product_information"
      android:textColor="@color/black"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/titleInformationText" />

    <TextView
      android:id="@+id/textFactoryAdress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      android:text="Pol. Ind los arcos, calle 13"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInformationText" />

    <TextView
      android:id="@+id/textTelephone"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginHorizontal="10dp"
      android:layout_marginVertical="10dp"
      android:text="92334223234"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textFactoryAdress" />

    <LinearLayout
      android:id="@+id/view_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#B6B5B5"
      android:layout_marginVertical="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textTelephone"
      android:layout_marginBottom="10dp">

      <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:layout_marginVertical="5dp"
        android:text="@string/product_information_1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelephone" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>